# sobj_arch

./: .editorconfig  CMakeLists.txt  config.json
src/: Agents.hpp  CommandQueue.hpp  JsonParser.hpp  Messages.hpp  NetworkUtils.hpp  main.cpp
tester/: CMakeLists.txt  tester.cpp  tester.hpp
